fixed bg image height on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,12 @@
-#root {
-    height: 100%;
-}
-
 .app {
-    height: 100%;
+    min-height: 100vh;
     padding: 24px 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: url('/src/assets/images/hogwarts-legacy.jpg');
     background-size: cover;
+    background-position: center;
 }
 
 .cards-container {
