--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,6 @@
 }
 
 body {
-    height: 100vh;
     font-family: var(--font-family);
     background-color: #000;
     color: #edecea;
